# SmartBarLighting

./: .gitignore  Dockerfile  README.md  RECIPE_SEEDING_IMPLEMENTATION.md  alembic.ini  bottles.db  local-dev.sh  package-lock.json  pyproject.toml
SmartBarApp/: app.py
app/: main.py
app/api/: router.py
app/api/endpoints/: auth.py  barcode.py  bottle.py  recipe.py  spirit_type.py
app/core/: auth.py  dependencies.py  settings.py
app/db/: base.py  session.py
app/db/models/: barcode_registry.py  bottle.py  recipe.py  shared_table.py  spirit_type.py  user.py
app/db/seed_data/: default_recipes.json
app/schemas/: barcode.py  bottle.py  bottle_import.py  recipe.py  spirit_type.py  user.py
app/services/: barcode.py  bottle.py  ollama.py  recipe.py  seed_service.py  spirit_type.py
bottles-app/: Dockerfile  Dockerfile.prod  package-lock.json  package.json  run.sh
bottles-app/src/app/: globals.css  layout.tsx  page.tsx
bottles-app/src/components/: ActionButton.tsx  AddBottleButton.tsx  AddBottleForm.tsx  AddRecipeForm.tsx  AddSpiritModal.tsx  AuthGuard.tsx  BarcodeScanner.tsx  BottleDetails.tsx  ConfirmDialog.tsx  FetchAllBottles.tsx  FetchAllBottlesButton.tsx  FetchAllRecipes.tsx  FetchBottleButton.tsx  HamburgerNav.tsx  LoadingSpinner.tsx  Login.tsx  LogoutButton.tsx  PageHeader.tsx  RecipeDetails.tsx  ScrollToTop.tsx  (+4 more)
migrations/: env.py
migrations/versions/: 001_convert_ingredients_to_json.py  1834717eeeb8_rename_material_to_spirit_type.py  3f9dba1d1a3e_recreate_migration.py  53a275dd30fc_initial_migration.py
static/: style.css
templates/: index.html
(+9 files in other folders)
